force-app/main/default/objects/Projects__c/fields/Project_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Project_Age_Days__c</fullName>
    <formula>IF(ISNULL(Actual_Start_Date__c),ROUND(NOW()- CreatedDate,0), ROUND(TODAY() - Actual_Start_Date__c,0))</formula>
    <inlineHelpText>If the Project has started, number of days from Actual Start Date, otherwise number of days from Created Date.</inlineHelpText>
    <label>Project Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>