force-app/main/default/objects/Projects__c/fields/Project_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Project_Alerts__c</fullName>
    <formula>IF(AND ( Total_Billable_Hours_Remaining__c &lt; 40, Percent_Complete_Score__c &lt; 80), &quot;Billable Hrs Remaining Low&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Alerts</label>
    <type>Text</type>
</CustomField>