force-app/main/default/objects/Projects__c/fields/Project_Billing_Rate_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Project_Billing_Rate_Per_Hour__c</fullName>
    <defaultValue>150.00</defaultValue>
    <label>Target Billing Rate Per Hour</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>