force-app/main/default/objects/Projects__c/fields/Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost__c</fullName>
    <formula>((( Total_Billable_Hours__c +  Total_Non_Billable_Hours__c) *  Project_Cost_Per_Hour__c ) + ( Total_Billable_Expenses__c +  Total_Non_Billable_Expenses__c ) +  Contractor_Costs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total cost for this project (Billable and Non Billable Hrs * Cost Per Hour + Billable and Non Billable Expenses + Contractor Costs)</inlineHelpText>
    <label>Project Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>