force-app/main/default/objects/Projects__c/fields/Project_Cost_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Per_Hour__c</fullName>
    <defaultValue>120.00</defaultValue>
    <label>Est. Cost Per Hour</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>