force-app/main/default/objects/Projects__c/fields/Project_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Project_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>