force-app/main/default/objects/Projects__c/fields/Project_Profit__c.field-meta.xml
<CustomField>
    <fullName>Project_Profit__c</fullName>
    <formula>Project_Revenue__c -  Project_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>