force-app/main/default/objects/Projects__c/fields/Project_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Project_Revenue__c</fullName>
    <formula>IF( ISPICKVAL(Billing__c, &quot;Fixed Bid Project&quot;), Fixed_Bid_Project_Amount__c +   Total_Travel_Expenses__c ,  Estimated_Billable_Hours__c *  Project_Billing_Rate_Per_Hour__c + Total_Travel_Expenses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>