force-app/main/default/objects/Projects__c/fields/Project_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Flag__c</fullName>
    <formula>IF(ISPICKVAL( Project_Status__c , &quot;Green&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;), IF(ISPICKVAL(Project_Status__c , &quot;Yellow&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;), IF(ISPICKVAL(Project_Status__c , &quot;Red&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>