force-app/main/default/objects/Projects__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <inlineHelpText>Add On Services - Existing application or service
Contract Hours - Hours provided within contract (billable or non/billable)
Migration - Migrate from legacy product to Portal or other platform
New Services - New integration or development</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Add-on Services</fullName>
            </value>
            <value>
                <fullName>Contract Hours</fullName>
            </value>
            <value>
                <fullName>Customer Retention</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>New Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>