force-app/main/default/objects/Projects__c/fields/Project_Update__c.field-meta.xml
<CustomField>
    <fullName>Project_Update__c</fullName>
    <inlineHelpText>Provides status of recent and/or upcoming activities or events.</inlineHelpText>
    <label>Project Update</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>