force-app/main/default/objects/Projects__c/fields/Related_Links__c.field-meta.xml
<CustomField>
    <fullName>Related_Links__c</fullName>
    <label>Related Links</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>