force-app/main/default/objects/Projects__c/fields/Release_Summary__c.field-meta.xml
<CustomField>
    <fullName>Release_Summary__c</fullName>
    <inlineHelpText>Provides key highlight(s) of the release content (i.e. main feature, release components).</inlineHelpText>
    <label>Release Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>