force-app/main/default/objects/Projects__c/fields/Release_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Release_Updated_Date_Time__c</fullName>
    <label>Release Updated Date/Time</label>
    <type>DateTime</type>
</CustomField>