force-app/main/default/objects/Projects__c/fields/Schedule_Health_Rank__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Health_Rank__c</fullName>
    <label>Schedule Health Rank</label>
    <summarizedField>Project_Milestone__c.Health_Rank__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Milestone__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>PM Milestone</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Milestone__c.Milestone_Name__c</field>
        <operation>equals</operation>
        <value>Commercial Release</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>