force-app/main/default/objects/Projects__c/fields/Scope_Change__c.field-meta.xml
<CustomField>
    <fullName>Scope_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope Change</label>
    <type>Checkbox</type>
</CustomField>