force-app/main/default/objects/Projects__c/fields/Scope_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Scope_Change_Date__c</fullName>
    <label>Scope Change Date</label>
    <type>Date</type>
</CustomField>