force-app/main/default/objects/Projects__c/fields/Score_3__c.field-meta.xml
<CustomField>
    <fullName>Score_3__c</fullName>
    <formula>IF(   Work_Completed__c   , 20, 0 )</formula>
    <label>Score 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>