force-app/main/default/objects/Projects__c/fields/Score_4__c.field-meta.xml
<CustomField>
    <fullName>Score_4__c</fullName>
    <formula>IF(    Final_Acceptance__c   , 20, 0)</formula>
    <label>Score 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>