force-app/main/default/objects/Projects__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Source of the project (lookup to Contacts table)</inlineHelpText>
    <label>Source</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>