force-app/main/default/objects/Projects__c/fields/Step_2_Duration__c.field-meta.xml
<CustomField>
    <fullName>Step_2_Duration__c</fullName>
    <formula>Estimate_Accepted_Date__c - Estimate_Delivered_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days from Estimate Delivered Date to Estimate Accepted Date</inlineHelpText>
    <label>Step 2 Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>