force-app/main/default/objects/Projects__c/fields/Step_3_Duration__c.field-meta.xml
<CustomField>
    <fullName>Step_3_Duration__c</fullName>
    <formula>Work_Completed_Date__c - Estimate_Accepted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days from Estimated Accepted Date to Work Completed Date</inlineHelpText>
    <label>Step 3 Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>