force-app/main/default/objects/Projects__c/fields/Step_4_Duration__c.field-meta.xml
<CustomField>
    <fullName>Step_4_Duration__c</fullName>
    <formula>Final_Acceptance_Date__c - Work_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days from Final Acceptance Date to Work Completed Date</inlineHelpText>
    <label>Step 4 Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>