force-app/main/default/objects/Projects__c/fields/Submitted_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for Billing</label>
    <type>Checkbox</type>
</CustomField>