force-app/main/default/objects/Projects__c/fields/Submitted_for_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Billing_Date__c</fullName>
    <label>Submitted for Billing Date</label>
    <type>Date</type>
</CustomField>