force-app/main/default/objects/Projects__c/fields/Success_Factors__c.field-meta.xml
<CustomField>
    <fullName>Success_Factors__c</fullName>
    <label>Success Factors</label>
    <type>TextArea</type>
</CustomField>