force-app/main/default/objects/Projects__c/fields/Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Amount__c</fullName>
    <formula>IF(ISPICKVAL(  Billing__c, &quot;Time &amp; Materials&quot;), Total_Billable_Expenses__c +  Total_Billable_Hours__c *  Project_Billing_Rate_Per_Hour__c,  Fixed_Bid_Project_Amount__c + Total_Billable_Expenses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Billable Expenses (Billable Expenses + Billable Hours * Billing Rate Per Hour)</inlineHelpText>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>