force-app/main/default/objects/Projects__c/fields/Total_Billable_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Amount_Remaining__c</fullName>
    <formula>Total_Estimated_Billable_Amount__c -  Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>