force-app/main/default/objects/Projects__c/fields/Total_Billable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Expenses__c</fullName>
    <inlineHelpText>Total of all billable expenses from the Expenses related list</inlineHelpText>
    <label>Billable Expenses</label>
    <summarizedField>Project_Expense__c.Total_Billable_Expenses__c</summarizedField>
    <summaryForeignKey>Project_Expense__c.Projects__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>