force-app/main/default/objects/Projects__c/fields/Total_Billable_Expenses_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Expenses_Remaining__c</fullName>
    <formula>Total_Travel_Expenses__c -  Total_Billable_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total billable expenses remaining</inlineHelpText>
    <label>Billable Expenses Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>