force-app/main/default/objects/Projects__c/fields/Total_Est_Hours_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Est_Hours_1__c</fullName>
    <formula>Est_Chargeable_Hours__c  + Est_Non_Chargeable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Est Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>