force-app/main/default/objects/Projects__c/fields/Total_Estimated_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Billable_Amount__c</fullName>
    <formula>IF( ISPICKVAL(Billing__c, &quot;Time &amp; Materials&quot;), Total_Travel_Expenses__c  + Estimated_Billable_Hours__c *  Project_Billing_Rate_Per_Hour__c,  Fixed_Bid_Project_Amount__c + Total_Travel_Expenses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Estimated Project Amount (Estimated Hours * Estimated Rate Per Hour + Estimated Travel Expenses). If Fixed Bid, then Fixed Bid Amount + Estimated Travel)</inlineHelpText>
    <label>Est. Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>