force-app/main/default/objects/Projects__c/fields/Total_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Hours__c</fullName>
    <formula>Estimated_Billable_Hours__c +  Estimated_Non_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total estimated hours (Estimated billable hours + Estimated non-billable hours)</inlineHelpText>
    <label>Total Est. Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>