force-app/main/default/objects/Projects__c/fields/Total_Hours_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_1__c</fullName>
    <formula>Chargeable_Hours__c + Non_Chargeable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>