force-app/main/default/objects/Projects__c/fields/Total_Non_Billable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Expenses__c</fullName>
    <inlineHelpText>Total of all non-billable expenses from the Expense related list</inlineHelpText>
    <label>Non-Billable Expenses</label>
    <summarizedField>Project_Expense__c.Total_Non_Billable_Expenses__c</summarizedField>
    <summaryForeignKey>Project_Expense__c.Projects__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>