force-app/main/default/objects/Projects__c/fields/Total_Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Hours__c</fullName>
    <inlineHelpText>Total non-billable hours from the Time related list</inlineHelpText>
    <label>Non-Billable Hours</label>
    <summarizedField>Project_Time__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Time__c.Billable__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Time__c.SFDC_Projects__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>