force-app/main/default/objects/Projects__c/fields/Total_Non_Billable_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Hours_Remaining__c</fullName>
    <formula>Estimated_Non_Billable_Hours__c  -  Total_Non_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total non-billable hours remaining</inlineHelpText>
    <label>Non Billable Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>