force-app/main/default/objects/Projects__c/fields/Total_Travel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>An estimate of the total travel expenses expected for this project.</inlineHelpText>
    <label>Est. Travel Expenses</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>