force-app/main/default/objects/Projects__c/fields/Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Completed</label>
    <type>Checkbox</type>
</CustomField>