force-app/main/default/objects/Projects__c/fields/Work_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_Date__c</fullName>
    <label>Work Completed Date</label>
    <type>Date</type>
</CustomField>