force-app/main/default/objects/Projects__c/recordTypes/CompletedCancelled.recordType-meta.xml
<RecordType>
    <fullName>CompletedCancelled</fullName>
    <active>true</active>
    <description>Projects that are completed or cancelled</description>
    <label>Completed/Cancelled</label>
</RecordType>