force-app/main/default/objects/Projects__c/recordTypes/InProgress.recordType-meta.xml
<RecordType>
    <fullName>InProgress</fullName>
    <active>true</active>
    <description>Projects that are in progress.</description>
    <label>In Progress</label>
</RecordType>