force-app/main/default/objects/Projects__c/recordTypes/PM_Project.recordType-meta.xml
<RecordType>
    <fullName>PM_Project</fullName>
    <active>true</active>
    <description>Used to track QES Program Management Projects</description>
    <label>PM Project</label>
</RecordType>