force-app/main/default/objects/Projects__c/validationRules/Act_Comp_Date_After_Act_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Act_Comp_Date_After_Act_Start_Date</fullName>
    <active>true</active>
    <description>The Actual Completion Date cannot be earlier than the Actual Start Date and cannot be later than today.</description>
    <errorConditionFormula>OR(Actual_Start_Date__c &gt;  Actual_Completion_Date__c, Actual_Completion_Date__c &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>Actual_Completion_Date__c</errorDisplayField>
    <errorMessage>The Actual Completion Date cannot be earlier than the Actual Start Date and/or cannot be later than today.</errorMessage>
</ValidationRule>