force-app/main/default/objects/Projects__c/validationRules/Act_Start_Date_Later_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Act_Start_Date_Later_Than_Today</fullName>
    <active>true</active>
    <description>The Actual Start Date cannot be later than today.</description>
    <errorConditionFormula>Actual_Start_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Actual_Start_Date__c</errorDisplayField>
    <errorMessage>The Actual Start Date cannot be later than today.</errorMessage>
</ValidationRule>