force-app/main/default/objects/Projects__c/validationRules/Est_Accepted_Date_Later_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Est_Accepted_Date_Later_Than_Today</fullName>
    <active>true</active>
    <description>The Estimate Accepted Date cannot be later than today.</description>
    <errorConditionFormula>Estimate_Accepted_Date__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Estimate_Accepted_Date__c</errorDisplayField>
    <errorMessage>The Estimate Accepted Date cannot be later than today.</errorMessage>
</ValidationRule>