force-app/main/default/objects/Projects__c/validationRules/Est_Billable_Hours_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Est_Billable_Hours_Cannot_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Estimated_Billable_Hours__c ),
$Profile.Name &lt;&gt; &quot;Professional Services Mgmt - Outlook&quot;,
$Profile.Name &lt;&gt; &quot;Professional Services Mgmt&quot;
)</errorConditionFormula>
    <errorDisplayField>Estimated_Billable_Hours__c</errorDisplayField>
    <errorMessage>Estimated Billable Hours cannot be changed</errorMessage>
</ValidationRule>