force-app/main/default/objects/Projects__c/validationRules/Est_Delivered_Date_Later_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Est_Delivered_Date_Later_Than_Today</fullName>
    <active>true</active>
    <description>The Estimate Delivered Date cannot be later than today.</description>
    <errorConditionFormula>Estimate_Delivered_Date__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Estimate_Delivered_Date__c</errorDisplayField>
    <errorMessage>The Estimate Delivered Date cannot be later than today.</errorMessage>
</ValidationRule>