force-app/main/default/objects/Projects__c/validationRules/Est_Start_Date_Before_Est_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Est_Start_Date_Before_Est_End_Date</fullName>
    <active>true</active>
    <description>Estimated Start Date cannot be later than Estimated Completion Date</description>
    <errorConditionFormula>Estimated_Start_Date__c &gt;  Estimated_Completion_Date__c</errorConditionFormula>
    <errorDisplayField>Estimated_Completion_Date__c</errorDisplayField>
    <errorMessage>The Estimated Completion Date cannot be earlier than the Estimated Start Date.</errorMessage>
</ValidationRule>