force-app/main/default/objects/Projects__c/validationRules/Final_Acceptance_Date_Later_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Acceptance_Date_Later_Than_Today</fullName>
    <active>true</active>
    <description>The Final Acceptance Date cannot be later than today.</description>
    <errorConditionFormula>Final_Acceptance_Date__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Final_Acceptance_Date__c</errorDisplayField>
    <errorMessage>The Final Acceptance Date cannot be later than today.</errorMessage>
</ValidationRule>