force-app/main/default/objects/Projects__c/validationRules/Fixed_Bid_Cannot_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Fixed_Bid_Cannot_Be_Zero</fullName>
    <active>true</active>
    <description>Fixed Bid amount cannot be zero if project type is Fixed Bid</description>
    <errorConditionFormula>AND (ISPICKVAL( Billing__c, &quot;Fixed Bid Project&quot;), OR( Fixed_Bid_Project_Amount__c &lt; 1, ISNULL(Fixed_Bid_Project_Amount__c )),  ISNULL( Fixed_Rate_Charge__c  ))</errorConditionFormula>
    <errorDisplayField>Fixed_Bid_Project_Amount__c</errorDisplayField>
    <errorMessage>Fixed Bid Amount must be greater than $0 if Billing = &quot;Fixed Bid&quot;.</errorMessage>
</ValidationRule>