force-app/main/default/objects/Projects__c/validationRules/PCHKLIST_Estimate_Delivered.validationRule-meta.xml
<ValidationRule>
    <fullName>PCHKLIST_Estimate_Delivered</fullName>
    <active>true</active>
    <description>Estimate Delivered fields must be populated if the Estimate has been delivered.</description>
    <errorConditionFormula>OR(AND ( Estimate_Delivered__c , ISNULL( Estimate_Delivered_Date__c )), AND(Estimate_Delivered__c &lt;&gt; True, NOT(ISNULL(Estimate_Delivered_Date__c))))</errorConditionFormula>
    <errorDisplayField>Estimate_Delivered__c</errorDisplayField>
    <errorMessage>Estimate Delivered checkbox AND Estimate Delivered Date must be populated if the Estimate has been delivered.</errorMessage>
</ValidationRule>