force-app/main/default/objects/Projects__c/validationRules/PCHKLIST_Submitted_For_Billing_Date_Chk.validationRule-meta.xml
<ValidationRule>
    <fullName>PCHKLIST_Submitted_For_Billing_Date_Chk</fullName>
    <active>true</active>
    <description>Submitted for Billing date cannot be earlier than Estimate Delivered Date</description>
    <errorConditionFormula>Submitted_for_Billing_Date__c &lt; Estimate_Delivered_Date__c</errorConditionFormula>
    <errorDisplayField>Submitted_for_Billing_Date__c</errorDisplayField>
    <errorMessage>The Submitted for Billing Date cannot be earlier than the Estimate Delivered Date.</errorMessage>
</ValidationRule>